[package]
name = "ice-kube"
version = "0.1.0"
authors = ["Jonathan Rothberg <jonnyrpi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.35.1"
kube-derive = "0.35.1"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
clap = {git = "https://github.com/clap-rs/clap"}
anyhow = "1.0.31"
thiserror = "1.0.19"
futures-util = "0.3.5"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
termion = "*"
env_logger = "0.7.1"
log = "0.4.8"
