[package]
name = "ice-kube"
version = "0.1.0"
authors = ["Jonathan Rothberg <jonnyrpi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kube = "0.37"
# kube-derive = "0.37"
kube = { version="0.37", git = "https://github.com/jonnywalker81/kube-rs.git" }
kube-derive = { version="0.37", git = "https://github.com/jonnywalker81/kube-rs.git" }
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
# clap = {git = "https://github.com/clap-rs/clap"}
clap = "3.0.0-beta.2"
anyhow = "1.0.31"
thiserror = "1.0.19"
futures-util = "0.3.5"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
termion = "*"
env_logger = "0.7.1"
log = "0.4.8"
regex = "1"
lazy_static = "1.4.0"
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
